Fixes spacing in new goal form. Attempts to fix note background function

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -81,7 +81,7 @@ main {
   padding-bottom: 30px;
 }
 
-#board-form , #new-goal{
+#board-form{
   text-align: center;
   position: absolute;
   top: 50%;
